new changes on folder structure

--- a/graduation-project/tsconfig.json
+++ b/graduation-project/tsconfig.json
@@ -28,7 +28,7 @@
     ".next/types/**/*.ts",
     "**/*.ts",
     "**/*.tsx"
-, "src/app/anything/page.jsx"  ],
+, "src/app/anything/page.tsx"  ],
   "exclude": [
     "node_modules"
   ]
