--- a/graduation-project/package.json
+++ b/graduation-project/package.json
@@ -9,11 +9,16 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@heroicons/react": "^2.0.16",
+    "axios": "^1.3.4",
     "eslint": "8.36.0",
     "eslint-config-next": "13.2.4",
+    "filesize": "^10.0.6",
+    "flowbite": "^1.6.4",
     "next": "13.2.4",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-phone-input-2": "^2.15.1"
   },
   "devDependencies": {
     "@types/node": "18.15.10",
