--- a/graduation-project/package.json
+++ b/graduation-project/package.json
@@ -13,6 +13,7 @@
     "@fullcalendar/daygrid": "^6.1.5",
     "@fullcalendar/react": "^6.1.5",
     "@fullcalendar/timegrid": "^6.1.6",
+    "@headlessui/react": "^1.7.14",
     "@heroicons/react": "^2.0.16",
     "axios": "^1.3.4",
     "eslint": "8.36.0",
