--- a/graduation-project/package.json
+++ b/graduation-project/package.json
@@ -14,6 +14,7 @@
     "@fullcalendar/react": "^6.1.5",
     "@fullcalendar/timegrid": "^6.1.6",
     "@heroicons/react": "^2.0.16",
+    "@material-tailwind/react": "^2.0.1",
     "axios": "^1.3.4",
     "eslint": "8.36.0",
     "eslint-config-next": "^13.2.4",
