--- a/graduation-project/package.json
+++ b/graduation-project/package.json
@@ -15,6 +15,8 @@
     "@fullcalendar/timegrid": "^6.1.6",
     "@headlessui/react": "^1.7.14",
     "@heroicons/react": "^2.0.16",
+    "@mobiscroll/react": "https://npm.mobiscroll.com/@mobiscroll/react-trial/-/react-trial-5.24.1.tgz",
+    "@syncfusion/ej2-react-calendars": "^21.2.5",
     "axios": "^1.3.4",
     "eslint": "8.36.0",
     "eslint-config-next": "^13.2.4",
