new stash applied on this branch

--- a/graduation-project/tsconfig.json
+++ b/graduation-project/tsconfig.json
@@ -4,7 +4,8 @@
     "paths": {
       "components": ["components"],
       "featuers": ["featuers"],
-      "data": ["data"]
+      "data": ["data"],
+      "lib": ["lib"]
     },
     "lib": ["dom", "dom.iterable", "esnext"],
     "allowJs": true,
