--- a/graduation-project/package.json
+++ b/graduation-project/package.json
@@ -9,15 +9,20 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.0",
+    "@emotion/styled": "^11.11.0",
     "@fullcalendar/core": "^6.1.6",
     "@fullcalendar/daygrid": "^6.1.5",
     "@fullcalendar/react": "^6.1.5",
     "@fullcalendar/timegrid": "^6.1.6",
     "@headlessui/react": "^1.7.14",
     "@heroicons/react": "^2.0.16",
-    "@mobiscroll/react": "https://npm.mobiscroll.com/@mobiscroll/react-trial/-/react-trial-5.24.1.tgz",
+    "@mui/material": "^5.13.3",
+    "@mui/x-date-pickers": "^6.10.0",
+    "@mui/x-date-pickers-pro": "^6.10.0",
     "@syncfusion/ej2-react-calendars": "^21.2.5",
     "axios": "^1.3.4",
+    "dayjs": "^1.11.9",
     "eslint": "8.36.0",
     "eslint-config-next": "^13.2.4",
     "filesize": "^10.0.6",
@@ -30,13 +35,20 @@
     "react-dom": "18.2.0",
     "react-hook-form": "^7.43.8",
     "react-phone-input-2": "^2.15.1",
+    "react-scripts": "4.0.3",
+    "react-tailwindcss-datepicker": "^1.6.3",
+    "react-time-picker": "^6.2.1",
     "swr": "^2.1.1"
+  },
+  "resolutions": {
+    "react-error-overlay": "6.0.9"
   },
   "devDependencies": {
     "@types/node": "18.15.10",
     "@types/react": "18.0.29",
     "autoprefixer": "^10.4.14",
     "postcss": "^8.4.21",
+    "react-error-overlay": "^6.0.9",
     "tailwindcss": "^3.2.7"
   }
 }
