--- a/graduation-project/package.json
+++ b/graduation-project/package.json
@@ -9,16 +9,22 @@
         "lint": "next lint"
     },
     "dependencies": {
-        "@fullcalendar/core": "^6.1.6",
-        "@fullcalendar/daygrid": "^6.1.5",
-        "@fullcalendar/react": "^6.1.5",
-        "@fullcalendar/timegrid": "^6.1.6",
+        "@emotion/react": "^11.11.1",
+        "@emotion/styled": "^11.11.0",
+        "@fullcalendar/core": "^6.1.8",
+        "@fullcalendar/daygrid": "^6.1.8",
+        "@fullcalendar/interaction": "^6.1.8",
+        "@fullcalendar/react": "^6.1.8",
+        "@fullcalendar/timegrid": "^6.1.8",
         "@headlessui/react": "^1.7.14",
         "@heroicons/react": "^2.0.16",
         "@material-tailwind/react": "^2.0.1",
         "@mobiscroll/react": "https://npm.mobiscroll.com/@mobiscroll/react-trial/-/react-trial-5.24.1.tgz",
+        "@mui/material": "^5.14.0",
+        "@mui/x-date-pickers": "^6.10.0",
         "@syncfusion/ej2-react-calendars": "^21.2.5",
         "axios": "^1.3.4",
+        "dayjs": "^1.11.9",
         "eslint": "8.36.0",
         "eslint-config-next": "^13.2.4",
         "filesize": "^10.0.6",
@@ -32,6 +38,8 @@
         "react-easy-crop": "^4.7.4",
         "react-hook-form": "^7.43.8",
         "react-phone-input-2": "^2.15.1",
+        "react-popper": "^2.3.0",
+        "react-tooltip": "^5.18.0",
         "swr": "^2.1.1"
     },
     "devDependencies": {
