--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@cyntler/react-doc-viewer": "^1.13.0",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@fullcalendar/core": "^6.1.8",
@@ -19,6 +20,7 @@
     "@headlessui/react": "^1.7.14",
     "@heroicons/react": "^2.0.16",
     "@material-tailwind/react": "^2.0.7",
+    "@mui/icons-material": "^5.14.1",
     "@mui/material": "^5.13.3",
     "@mui/x-date-pickers": "^6.10.0",
     "@mui/x-date-pickers-pro": "^6.10.0",
@@ -31,7 +33,7 @@
     "flowbite": "^1.6.4",
     "flowbite-datepicker": "^1.2.2",
     "js-cookie": "^3.0.1",
-    "next": "13.4.7",
+    "next": "13.4.12",
     "react": "18.2.0",
     "react-calendar": "^4.2.1",
     "react-country-flag": "^3.1.0",
@@ -40,7 +42,6 @@
     "react-hook-form": "^7.43.8",
     "react-phone-input-2": "^2.15.1",
     "react-popper": "^2.3.0",
-    "react-scripts": "^2.1.3",
     "react-tailwindcss-datepicker": "^1.6.3",
     "react-time-picker": "^6.2.1",
     "react-tooltip": "^5.18.0",
