--- a/graduation-project/package.json
+++ b/graduation-project/package.json
@@ -9,52 +9,51 @@
         "lint": "next lint"
     },
     "dependencies": {
+        "@cyntler/react-doc-viewer": "^1.13.0",
         "@emotion/react": "^11.11.1",
         "@emotion/styled": "^11.11.0",
         "@fullcalendar/core": "^6.1.8",
         "@fullcalendar/daygrid": "^6.1.8",
-        "@fullcalendar/interaction": "^6.1.8",
         "@fullcalendar/react": "^6.1.8",
         "@fullcalendar/timegrid": "^6.1.8",
         "@headlessui/react": "^1.7.14",
         "@heroicons/react": "^2.0.16",
         "@material-tailwind/react": "^2.0.1",
-        "@mobiscroll/react": "https://npm.mobiscroll.com/@mobiscroll/react-trial/-/react-trial-5.24.1.tgz",
         "@mui/material": "^5.13.3",
         "@mui/x-date-pickers": "^6.10.0",
         "@mui/x-date-pickers-pro": "^6.10.0",
+        "@react-pdf/renderer": "^3.1.12",
         "@syncfusion/ej2-react-calendars": "^21.2.5",
+        "autoprefixer": "^10.4.14",
         "axios": "^1.3.4",
         "dayjs": "^1.11.9",
         "eslint": "8.36.0",
         "eslint-config-next": "^13.2.4",
         "filesize": "^10.0.6",
         "flowbite": "^1.6.4",
-        "flowbite-datepicker": "^1.2.2",
         "js-cookie": "^3.0.1",
         "next": "13.2.4",
+        "pdfjs-dist": "^3.8.162",
+        "pspdfkit": "^2023.3.4",
         "react": "18.2.0",
         "react-calendar": "^4.2.1",
+        "react-doc-viewer": "^0.1.5",
         "react-dom": "18.2.0",
         "react-easy-crop": "^4.7.4",
         "react-hook-form": "^7.43.8",
+        "react-pdf": "^7.2.0",
         "react-phone-input-2": "^2.15.1",
-        "react-popper": "^2.3.0",
-        "react-scripts": "^2.1.3",
         "react-tailwindcss-datepicker": "^1.6.3",
-        "react-time-picker": "^6.2.1",
-        "react-tooltip": "^5.18.0",
         "swr": "^2.1.1"
     },
     "resolutions": {
         "react-error-overlay": "6.0.9"
     },
     "devDependencies": {
-        "@types/node": "18.15.10",
+        "@types/node": "20.4.2",
         "@types/react": "18.0.29",
-        "autoprefixer": "^10.4.14",
-        "postcss": "^8.4.21",
-        "react-error-overlay": "^6.0.9",
+        "file-loader": "^6.2.0",
+        "raw-loader": "^4.0.2",
         "tailwindcss": "^3.2.7"
     }
 }
