--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "@fullcalendar/timegrid": "^6.1.8",
     "@headlessui/react": "^1.7.14",
     "@heroicons/react": "^2.0.16",
-    "@material-tailwind/react": "^2.0.5",
+    "@material-tailwind/react": "2.0.5",
     "@mui/icons-material": "^5.14.1",
     "@mui/material": "^5.13.3",
     "@mui/x-date-pickers": "^6.10.0",
