--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
   "devDependencies": {
     "@types/node": "20.4.2",
     "@types/react": "18.0.29",
+    "compression-webpack-plugin": "^10.0.0",
     "file-loader": "^6.2.0",
     "raw-loader": "^4.0.2",
     "tailwindcss": "^3.2.7"
