--- a/package.json
+++ b/package.json
@@ -56,7 +56,7 @@
 
     "compression-webpack-plugin": "^10.0.0",
     "file-loader": "^6.2.0",
-    "raw-loader": "^4.0.2"
+    "raw-loader": "^4.0.2",
     "tailwindcss": "^3.2.7"
   }
 }
