--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "file-loader": "^6.2.0",
     "filesize": "^10.0.6",
     "flowbite": "^1.6.4",
+    "framer-motion": "^10.15.1",
     "js-cookie": "^3.0.1",
     "next": "13.4.12",
     "pdfjs-dist": "^3.8.162",
